syntax = "proto3";

package response_models;
import "username-model.proto";

message UsernameResponseModel {
	util_models.UsernameModel player_data = 1;
}